libstd/libgcc error

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,8 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "-static",
+                "-static-libgcc",
+                "-static-libstdc++",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
